--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,3 +16,9 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: docker build . --file dockerfile --tag my-image-name:$(date +%s)
+      
+  new-job:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Ubuntu job
+      run: ls
