--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,6 +6,8 @@ on:
   pull_request:
     branches: [ "main" ]
 
+
+
 jobs:
 
   build:
@@ -16,6 +18,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: docker build . --file dockerfile --tag my-image-name:$(date +%s)
+    - name: Run Docker Container
+      run: docker run my-image-name:$(date +%s)
       
   new-job:
     runs-on: ubuntu-latest
