--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,13 +15,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Get Commit SHA
-      run: export git_hash=$(git rev-parse --short "$GITHUB_SHA")
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file dockerfile --tag my-image-name:$git_hash
+      run: docker build . --file dockerfile --tag my-image-name:1.0
     - name: Run Docker Container
-      run: docker run my-image-name:$git_hash
+      run: docker run my-image-name:$1.0
       
   new-job:
     runs-on: ubuntu-latest
